--- a/MyProj/MyProj.csproj
+++ b/MyProj/MyProj.csproj
@@ -203,6 +203,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\User\Auth.cshtml" />
+    <Content Include="Views\User\Reg.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
