--- a/MyProj/MyProj.csproj
+++ b/MyProj/MyProj.csproj
@@ -161,12 +161,14 @@
     </Compile>
     <Compile Include="Models\DataBaseContext.cs" />
     <Compile Include="Models\Hash.cs" />
-    <Compile Include="Models\Model.cs" />
+    <Compile Include="Models\Models.cs" />
     <Compile Include="Models\Salt.cs" />
     <Compile Include="Models\VerifyCode.cs" />
+    <Compile Include="Models\XmlReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="config.xml" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
